--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "express-session": "^1.16.1",
     "morgan": "^1.10.0",
     "mysql2": "^1.6.5",
+    "nodemailer": "^6.4.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.8.6"
